<resources>
    <string name="app_name">Cours en Ligne</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Connection">Se connecter</string>
    <string name="Inscription">S\'inscrire</string>
    <string name="Nom">Nom</string>
    <string name="Prenom">Prenom</string>
    <string name="Email">Email</string>
    <string name="pseudo">Pseudo</string>
    <string name="Password1">Password1</string>
    <string name="Password">Password</string>
</resources>
